--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 		<div class="wrapper">
 			<header>
 				<h1 style="align-self:flex-end;">CS184/284A Homework Webpages</h1>
+				<p>By: Kunhong Lyu</p>
 			</header>
 			<main>
 				<div class="content">
