change some names and add website url

--- a/hw2/index.html
+++ b/hw2/index.html
@@ -32,7 +32,7 @@
 
 		<br>
 
-		Link to webpage: (TODO) <a href="https://cs184.eecs.berkeley.edu/sp25">cs184.eecs.berkeley.edu/sp25</a>
+		Link to webpage: <a href="https://lapluma430.github.io/cs184hw_website/">Isabella Hu and Kunhong Lyu's HW website</a>
 
 		<br>
 		
