--- a/hw2/index.html
+++ b/hw2/index.html
@@ -679,8 +679,30 @@
 		</div>
 
 
-		<!-- <h2>(Optional) Section III: Potential Extra Credit - Art Competition: Model something Creative</h2>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. -->
+		<h2>Section III: Potential Extra Credit - Art Competition: Model something Creative</h2>
+				<p> modeled the gear in Blender using mesh-editing tools.  
+					Used the symmetry and extrude shortcut to shape its the pattern 
+					efficiently. A sunlight source was also added to provide basic 
+					illumination for the exported .dae file.</p>
+		
+		<div style="display: flex; flex-direction: column; align-items: center;">
+			<table style="width: 100%; text-align: center; border-collapse: collapse;">
+			  <tr>
+				<td style="text-align: center;">
+				  <img src="ec1.png" width="280px"/>
+				  <figcaption>Initial mesh before subdivision (Level 0)</figcaption>
+				</td>
+				<td style="text-align: center;">
+				  <img src="ec2.png" width="280px"/>
+				  <figcaption>After one subdivision iteration (Level 1)</figcaption>
+				</td>
+				<td style="text-align: center;">
+				  <img src="ec3.png" width="280px"/>
+				  <figcaption>After two subdivision iteration (Level 2)</figcaption>
+				</td>
+			  </tr>
+			</table>
+			</div>
 
 		</div>
 	</body>
